# tb

./: Cargo.toml  README.md  build.rs  install.ps1
resources/: app.manifest  render.ps1
src/: cli.rs  hotkey.rs  lib.rs  main.rs  paths.rs  taskbar.rs  tray.rs
